--- a/SfButtonWithVSM/SfButtonWithVSM/MainPage.xaml
+++ b/SfButtonWithVSM/SfButtonWithVSM/MainPage.xaml
@@ -48,14 +48,16 @@
                             <Setter Property="Text" Value="Enabled" />
                         </VisualState.Setters>
                     </VisualState>
-                    <VisualState x:Name="Pressed">
-                        <VisualState.Setters>
-                            <Setter Property="Text" Value="Clicked" />
-                        </VisualState.Setters>
-                    </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="Text" Value="Disabled" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+                <VisualStateGroup x:Name="ButtonStates">
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="Text" Value="Clicked" />
                         </VisualState.Setters>
                     </VisualState>
                     <VisualState x:Name="Checked">
